--- a/analysis/siracon-outline.Rmd
+++ b/analysis/siracon-outline.Rmd
@@ -114,7 +114,7 @@ filtered_gitlogs |>
 ggsave("rendered/monthly-commits.png", width = 16 * 0.6, height = 9 * 0.6, bg = "white")
 ```
 
-[high resolution plot](rendered/monthly-commits.png)
+[High resolution plot](rendered/monthly-commits.png)
 
 ## Timeline
 
@@ -145,7 +145,7 @@ gg_vistime(repo_timeline, col.event = "repo", title = "R Development Timeline") 
 ggsave("rendered/dev-timeline.png", width = 16 * 0.6, height = 9 * 0.6, bg = "white")
 ```
 
-[high resolution plot](rendered/dev-timeline.png)
+[High resolution plot](rendered/dev-timeline.png)
 
 ## Key events
 
@@ -460,7 +460,7 @@ monthly_releases |>
 ggsave("rendered/monthly-releases.png", width = 16 * 0.6, height = 9 * 0.6, bg = "white")
 ```
 
-[high resolution plot](rendered/monthly-releases.png)
+[High resolution plot](rendered/monthly-releases.png)
 
 Also plot releases per commit, which will fall between 0 and 1. The dotted lines mark adoption of
 GitHub and implementation of release automation.
@@ -485,7 +485,7 @@ filtered_gitlogs |>
 ggsave("rendered/releases-per-commit.png", width = 16 * 0.6, height = 9 * 0.6, bg = "white")
 ```
 
-[high resolution plot](rendered/releases-per-commit.png)
+[High resolution plot](rendered/releases-per-commit.png)
 
 # Story
 
