--- a/analysis/siracon-outline.Rmd
+++ b/analysis/siracon-outline.Rmd
@@ -463,6 +463,31 @@ ggsave("rendered/monthly-releases.png", width = 16 * 0.6, height = 9 * 0.6, bg =
 
 [High resolution plot](rendered/monthly-releases.png)
 
+However, the number of releases per month might just represent how much work is being done, and
+looks similar to the plot of all commits by month:
+
+```{r monthly_commits}
+gitlogs |>
+  filter(time < ymd_h("2022-05-01 0", tz = Sys.timezone())) |>
+  mutate(time = floor_date(time, unit = "month")) |>
+  group_by(time) |>
+  summarize(commits = n(), .groups = "drop") |>
+  arrange(time) |>
+  ggplot(aes(x = time, y = commits)) +
+  geom_point() +
+  geom_line() +
+  geom_vline(xintercept = ymd_h("2020-12-01 0", tz = Sys.timezone()), linetype = "dotted") +
+  geom_vline(xintercept = ymd_h("2022-01-01 0", tz = Sys.timezone()), linetype = "dotted") +
+  coord_cartesian(ylim = c(0, NA)) +
+  labs(title = "Monthly git commits") +
+  labs(x = "", y = "") +
+  theme_quo()
+
+ggsave("rendered/monthly-commits.png", width = 16 * 0.6, height = 9 * 0.6, bg = "white")
+```
+
+[High resolution plot](rendered/monthly-commits.png)
+
 Also plot releases per commit, which will fall between 0 and 1. The dotted lines mark adoption of
 GitHub and implementation of release automation.
 
@@ -480,7 +505,7 @@ gitlogs |>
   geom_line() +
   geom_vline(xintercept = ymd_h("2020-12-01 0", tz = Sys.timezone()), linetype = "dotted") +
   geom_vline(xintercept = ymd_h("2022-01-01 0", tz = Sys.timezone()), linetype = "dotted") +
-  labs(title = "GitHub releases per commit by month") +
+  labs(title = "Monthly GitHub releases per commit") +
   labs(x = "", y = "") +
   theme_quo()
 
